Fixed button on /contact/email.html
`max-width` property at 769px screen or larger was too small, causing the text of the button to stack on top of itself.

Increasing `max-width` to 50% solved this problem.

--- a/src/css/media-queries.css
+++ b/src/css/media-queries.css
@@ -199,7 +199,7 @@
   }
 
   .form-section .form-container .form button {
-    max-width: 35%;
+    max-width: 50%;
   }
 
   #calendly-link {
